# model-evaluation-tool

./: .gitignore  README.md  evaluate-accuracy.py  evaluate.py  label-upload.py  pyproject.toml  requirements.txt  train.py
