[tool.poetry]
name = "model-evaluation-tool"
version = "0.1.0"
description = "Simple script for sending labeled data to Groundlight and run evaluation tests"
authors = ["Harry Tung <harry@groundlight.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
groundlight = "^0.19.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
